--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <script src="bower_components/jquery/jquery.js"></script>
 
     <!-- Other custom -->
+    <script src="bower_components/z-schema/dist/ZSchema-browser.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
 
