--- a/app/index.html
+++ b/app/index.html
@@ -42,18 +42,17 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
     <!-- Streetlife -->
-    <script src="js/initial.js"></script>
-    <script src="js/map/map.js"></script>
-    <script src="js/map/leftMenu.js"></script>
-    <script src="js/map/rightMenu.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/tabs/map/map.js"></script>
+    <script src="js/tabs/map/leftMenu.js"></script>
+    <script src="js/tabs/map/rightMenu.js"></script>
 
     <script src="js/bootstrapComponent/bootstrap-notify.js"></script>
     <script src="js/bootstrapComponent/notification.js"></script>
     <script src="js/chart.js"></script>
-    <script src="js/ParkingAreaToOLTransformator.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/tabs/map/ParkingAreaToOLTransformator.js"></script>
     <script src="js/chart.js"></script>
-    <script src="js/mapController.js"></script>
+    <script src="js/tabs/map/mapController.js"></script>
     <script src="js/bootstrapComponent/tabPanel.js"></script>
     <!-- ************************************************* -->
 
