--- a/app/index.html
+++ b/app/index.html
@@ -43,17 +43,15 @@
 
     <!-- Streetlife -->
     <script src="js/app.js"></script>
-    <script src="js/tabs/map/map.js"></script>
+    <script src="js/tabs/map/olMap.js"></script>
     <script src="js/tabs/map/leftMenu.js"></script>
     <script src="js/tabs/map/rightMenu.js"></script>
 
     <script src="js/bootstrapComponent/bootstrap-notify.js"></script>
-    <script src="js/bootstrapComponent/notification.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/tabs/map/ParkingAreaToOLTransformator.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/tabs/map/mapController.js"></script>
-    <script src="js/bootstrapComponent/tabPanel.js"></script>
     <!-- ************************************************* -->
 
 </head>
