included grunt with sample gruntfile and readme file

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
     <script src="js/tabs/map/leftMenu.js"></script>
     <script src="js/tabs/map/rightMenu.js"></script>
 
-    <script src="js/bootstrapComponent/bootstrap-notify.js"></script>
+    <script src="js/bootstrap-notify.js"></script>
     <script src="js/chart.js"></script>
     <script src="js/tabs/map/ParkingAreaToOLTransformator.js"></script>
     <script src="js/chart.js"></script>
