--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/foundation/css/foundation.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons/foundation-icons.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/foundation/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- JS -->
-    <script type="text/javascript" src="bower_components/angular/angular.js"></script>
-    <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="bower_components/ui-router/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
-    <script type="text/javascript" src="bower_components/angular-foundation/mm-foundation-tpls.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="../bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-foundation/mm-foundation-tpls.min.js"></script>
 
     <script type="text/javascript" src="js/app.js" ></script>
     <script type="text/javascript" src="js/config.js"></script>
