change bower_component directory

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
