--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,20 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <!-- JS -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="http://openlayers.org/api/OpenLayers.js"></script>
+    <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
+
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
     <script type="text/javascript" src="bower_components/ui-router/release/angular-ui-router.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="bower_components/angular-foundation/mm-foundation-tpls.min.js"></script>
+
+
+    <script type="text/javascript" src="modules/map/controllers/olmap.js"></script>
+    <script type="text/javascript" src="modules/common/services/Socket.js"></script>
+    <script type="text/javascript" src="modules/map/controllers/MapController.js"></script>
 
     <script type="text/javascript" src="js/app.js" ></script>
     <script type="text/javascript" src="js/config.js"></script>
