set ROV as center

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="bower_components/ui-router/release/angular-ui-router.js"></script>
     <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="bower_components/angular-foundation/mm-foundation-tpls.min.js"></script>
-
+    <script src="bower_components/angular-websocket/dist/angular-websocket.js"></script>
 
     <script type="text/javascript" src="modules/map/controllers/olmap.js"></script>
     <script type="text/javascript" src="modules/common/services/Socket.js"></script>
