--- a/app/index.html
+++ b/app/index.html
@@ -7,16 +7,34 @@
     <link rel="stylesheet" href="bower_components/foundation/css/normalize.css">
 
     <!-- injector:css -->
-    <link rel="stylesheet" href="dest/css/dependencies.css">
-    <link rel="stylesheet" href="dest/css/Streetlife-MMECP-UI.css">
+    <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
+    <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinjector -->
 
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 
     <!-- injector:js -->
-    <script src="dest/js/dependencies.js"></script>
-    <script src="dest/js/Streetlife-MMECP-UI.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-websocket/angular-websocket.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+    <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
+    <script src="bower_components/foundation/js/foundation.js"></script>
+    <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+    <script src="modules/common/services/Socket.js"></script>
+    <script src="modules/dashboard/controllers/dashboardController.js"></script>
+    <script src="modules/dashboard/dashboard.js"></script>
+    <script src="modules/map/controllers/MapController.js"></script>
+    <script src="modules/map/controllers/olmap.js"></script>
     <!-- endinjector -->
 </head>
 
