set angularjs architecture for informationpanel, distinguish between horizontal and vertical panel

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
     <script src="modules/dashboard/dashboard.js"></script>
     <script src="modules/map/controllers/MapController.js"></script>
     <script src="modules/map/controllers/olmap.js"></script>
+    <script src="modules/map/directives/directives.js"></script>
     <!-- endinjector -->
 </head>
 
