refactor and show mapObject information in informationPanel

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,8 @@
     <script src="modules/dashboard/controllers/dashboardController.js"></script>
     <script src="modules/dashboard/dashboard.js"></script>
     <script src="modules/map/controllers/MapController.js"></script>
-    <script src="modules/map/controllers/olmap.js"></script>
     <script src="modules/map/directives/directives.js"></script>
+    <script src="modules/map/olmap.js"></script>
     <!-- endinjector -->
 </head>
 
