--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,6 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-websocket/angular-websocket.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
@@ -28,6 +27,7 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-websocket/ng-websocket.js"></script>
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
     <script src="modules/common/services/Socket.js"></script>
