--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
     <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/test.css">
     <!-- endinjector -->
 
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
