--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
     <!-- injector:css -->
     <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
     <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
+    <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/test.css">
     <!-- endinjector -->
 
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
@@ -28,14 +28,19 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/nv.d3.js"></script>
+    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
     <script src="modules/common/services/Socket.js"></script>
     <script src="modules/dashboard/controllers/dashboardController.js"></script>
     <script src="modules/dashboard/dashboard.js"></script>
+    <script src="modules/dashboard/directives/directives.js"></script>
     <script src="modules/map/controllers/MapController.js"></script>
     <script src="modules/map/directives/directives.js"></script>
     <script src="modules/map/olmap.js"></script>
+    <script src="modules/statusPanel/controllers/StatusPanelController.js"></script>
     <!-- endinjector -->
 
     <script src="thirdparty/ng-websocket/ng-websocket.js"></script>
