--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
     <script src="modules/common/services/Socket.js"></script>
+    <script src="modules/dashboard/ImpressumController.js"></script>
     <script src="modules/dashboard/controllers/dashboardController.js"></script>
     <script src="modules/dashboard/dashboard.js"></script>
     <script src="modules/dashboard/directives/directives.js"></script>
@@ -59,7 +60,7 @@
             <!-- Right Nav Section -->
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="#">Impressum</a></li>
+                <li ng-controller="impressumnController"><a ng-click="openImpressum()" href="#">Impressum</a></li>
             </ul>
 
             <!-- Left Nav Section -->
