--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
                 </select>
                 <li class="divider" style="float:left"></li>
                 <li ng-controller="impressumnController" style="float:left"><a ng-click="openImpressum()" href="#">Impressum</a></li>
+                <li><a><i class="fi-list-thumbnails large" style="font-size: 20px"></i></a></li>
             </ul>
 
             <!-- Left Nav Section -->
@@ -76,7 +77,6 @@
             </ul>
         </top-bar-section>
     </top-bar>
-
     <div ui-view></div>
 </body>
 </html>
