--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,16 @@
     <!-- endinjector -->
 
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
+
+    <!--proj4js need for coordinates transform -->
+    <script src = "js/proj4js/proj4js.js"></script>
+    <script src="js/proj4js/projCode/tmerc.js" type="text/javascript"></script>
+    <script src="js/proj4js/projCode/utm.js" type="text/javascript"></script>
+    <script src="js/proj4js/projCode/merc.js"></script>
+    <!--proj4js need for coordinates end -->
+
+
+
     <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
 
     <!-- injector:js -->
