--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
                     </ul>
                 </li>
                 <li ng-controller="impressumnController" style="float:left"><a ng-click="openImpressum()" href="#">Impressum</a></li>
-                <li><a ng-click="showHideKPIs()" class="menu-icon-list" style="background-color:black !important;"><i class="fi-list-thumbnails large" style="font-size: 20px"></i></a></li>
+                <li><a class="menu-icon-list" style="background-color:black !important;"><i class="fi-list-thumbnails large" style="font-size: 20px"></i></a></li>
 
 
             </ul>
