map not visible fixed - undo style changes

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
                     </ul>
                 </li>
                 <li ng-controller="impressumnController" style="float:left"><a ng-click="openImpressum()" href="#">Imprint</a></li>
-                <li><a class="menu-icon-list" style="background-color:black !important;padding-left: 12px;"><i class="fi-widget large" style="font-size: 20px"></i></a></li>
+                <li><a class="menu-icon-list" style="background-color:black !important;"><i class="fi-list-thumbnails large" style="font-size: 20px"></i></a></li>
 
 
             </ul>
