initial legend controller - controller refectoring

--- a/app/index.html
+++ b/app/index.html
@@ -77,9 +77,14 @@
     <script src="js/proj4js/projCode/tmerc.js"></script>
     <script src="js/proj4js/projCode/utm.js"></script>
     <script src="js/proj4js/projCode/vandg.js"></script>
+
+
     <script src="modules/common/services/Socket.js"></script>
     <script src="modules/common/services/commonController.js"></script>
     <script src="modules/dashboard/controllers/dashboardController.js"></script>
+    <script src="modules/dashboard/controllers/chartController.js"></script>
+    <script src="modules/dashboard/controllers/citySelectionController.js"></script>
+    <script src="modules/dashboard/controllers/mapLegendController.js"></script>
     <script src="modules/dashboard/dashboard.js"></script>
     <script src="modules/dashboard/directives/directives.js"></script>
     <script src="modules/map/controllers/MapController.js"></script>
