--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- endinjector -->
 
-    <script src="http://openlayers.org/api/OpenLayers.js"></script>
 
     <!--proj4js need for coordinates transform -->
     <script src = "js/proj4js/proj4js.js"></script>
@@ -23,6 +22,10 @@
     <script src="js/proj4js/projCode/merc.js"></script>
     <!--proj4js need for coordinates end -->
 
+
+
+    <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
+    <script src="http://openlayers.org/en/v3.10.1/build/ol.js"></script>
 
 
     <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
@@ -44,6 +47,13 @@
     <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="bower_components/proj4/dist/proj4.js"></script>
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.min.js"></script>
+
+    <script src="bower_components/Openlayers/lib/OpenLayers.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+
+
+
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
     <script src="js/proj4js/defs/EPSG2393.js"></script>
@@ -92,6 +102,7 @@
     <script src="modules/map/directives/directives.js"></script>
     <script src="modules/map/map.js"></script>
     <script src="modules/map/olmap.js"></script>
+    <script src="modules/map/OpenLayer3Map.js"></script>
     <script src="modules/map/services/services.js"></script>
     <!-- endinjector -->
 
