loading bar added

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
     <link rel="stylesheet" href="bower_components/foundation/css/normalize.css">
     <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css">
+
+    <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
     <link rel="stylesheet" href="css/main.css">
     <!-- endinjector -->
 
@@ -51,6 +53,7 @@
     <script src="bower_components/Openlayers/lib/OpenLayers.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script type='text/javascript' src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
 
 
