--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,12 @@
 
 
 
+    <!-- Openlayer Includes -->
+    <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
+    <script src="http://openlayers.org/en/v3.10.1/build/ol.js"></script>
+    <!-- Openlayer Includes -->
+
+
     <!-- injector:css -->
     <link rel="stylesheet" href="bower_components/foundation/css/foundation.css">
     <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
@@ -18,20 +24,12 @@
     <!-- endinjector -->
 
 
-
-
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
-    <script src="http://openlayers.org/en/v3.10.1/build/ol.js"></script>
-
-
-
     <!-- injector:js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
-
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/fastclick/lib/fastclick.js"></script>
     <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
@@ -42,17 +40,14 @@
     <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
     <script src="bower_components/proj4/dist/proj4.js"></script>
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.min.js"></script>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script type='text/javascript' src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
     <!-- endinjector -->
 
-
     <script src="js/app.js"></script>
     <script src="js/config.js"></script>
-
 
 
     <script src="modules/common/services/Socket.js"></script>
