--- a/app/index.html
+++ b/app/index.html
@@ -16,16 +16,50 @@
 
 
     <!-- injector:css -->
-    <link rel="stylesheet" href="dest/css/dependencies.css">
-    <link rel="stylesheet" href="dest/css/Streetlife-MMECP-UI.css">
+    <link rel="stylesheet" href="bower_components/foundation-icon-fonts/foundation-icons.css">
+    <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css">
+    <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinjector -->
 
 
 
 
     <!-- injector:js -->
-    <script src="dest/js/dependencies.js"></script>
-    <script src="dest/js/Streetlife-MMECP-UI.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-foundation/mm-foundation-tpls.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
+    <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
+    <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
+    <script src="bower_components/foundation/js/foundation.js"></script>
+    <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/nv.d3.js"></script>
+    <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+    <script src="bower_components/proj4/dist/proj4.js"></script>
+    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+    <script src="modules/common/services/Socket.js"></script>
+    <script src="modules/common/services/commonController.js"></script>
+    <script src="modules/dashboard/controllers/chartController.js"></script>
+    <script src="modules/dashboard/controllers/citySelectionController.js"></script>
+    <script src="modules/dashboard/controllers/dashboardController.js"></script>
+    <script src="modules/dashboard/controllers/mapLegendController.js"></script>
+    <script src="modules/dashboard/controllers/tabController.js"></script>
+    <script src="modules/dashboard/dashboard.js"></script>
+    <script src="modules/dashboard/directives/directives.js"></script>
+    <script src="modules/map/OpenLayer3Map.js"></script>
+    <script src="modules/map/controllers/MapController.js"></script>
+    <script src="modules/map/directives/directives.js"></script>
+    <script src="modules/map/map.js"></script>
+    <script src="modules/map/services/mapService.js"></script>
     <!-- endinjector -->
 
 
