--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Streetlife</title>
 
-
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-ico; charset=binary">
 
     <!-- Openlayer Includes -->
     <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
