design city selection

--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
 
 
     </top-bar>
-    <div id="lineImage"> <img src="img/lineImage.jpg"></div>
+    <div id="lineImage"> </div>
     <div ui-view></div>
 
 </body>
