--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="utf-8">
-    <title>Streetlife</title>
+    <title>Streetlife | Cockpit</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-ico; charset=binary">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-ico; charset=binary">
 
     <!-- Openlayer Includes -->
     <link rel="stylesheet" href="http://openlayers.org/en/v3.10.1/css/ol.css" type="text/css">
