datepicker selection with socket send first version

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,7 @@
     <script src="modules/dashboard/controllers/chartController.js"></script>
     <script src="modules/dashboard/controllers/citySelectionController.js"></script>
     <script src="modules/dashboard/controllers/dashboardController.js"></script>
+    <script src="modules/dashboard/controllers/filterDatePickerController.js"></script>
     <script src="modules/dashboard/controllers/mapLegendController.js"></script>
     <script src="modules/dashboard/controllers/modalSplitController.js"></script>
     <script src="modules/dashboard/controllers/tabController.js"></script>
